// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template gets single template 1`] = `
Object {
  "template": Object {
    "__typename": "ActivityTemplate",
    "createdAt": "2018-02-26T19:44:34.778Z",
    "description": "We are going to do something really great!",
    "duration": "120",
    "id": "fa7a48e0-1043-11e8-b919-8f03cfc03e44",
    "title": "My Great Activity",
    "updatedAt": "2018-02-26T19:44:34.778Z",
    Symbol(id): "ActivityTemplate:fa7a48e0-1043-11e8-b919-8f03cfc03e44",
  },
  Symbol(id): "ROOT_QUERY",
}
`;

exports[`template return allTemplates 1`] = `
Object {
  "allActivityTemplates": Array [
    Object {
      "__typename": "ActivityTemplate",
      "createdAt": "2018-02-26T19:44:34.778Z",
      "description": "We are going to do something really great!",
      "duration": "120",
      "id": "fa7a48e0-1043-11e8-b919-8f03cfc03e44",
      "title": "My Great Activity",
      "updatedAt": "2018-02-26T19:44:34.778Z",
      Symbol(id): "ActivityTemplate:fa7a48e0-1043-11e8-b919-8f03cfc03e44",
    },
  ],
  Symbol(id): "ROOT_QUERY",
}
`;
